Fixed home layout gap issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -82,10 +82,11 @@
 
 @layer components {
 	.phastr-container {
+		border: 1px solid var(--p-surface-200);
 		color: var(--p-surface-700);
-		box-shadow:
+		/* box-shadow:
 			0 1px 3px 0 rgba(0, 0, 0, 0.1),
-			0 1px 2px -1px rgba(0, 0, 0, 0.1);
+			0 1px 2px -1px rgba(0, 0, 0, 0.1); */
 
 		@variant dark {
 			border: 1px solid var(--p-surface-700);
